add markup class

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,31 @@ a {
 ul {
   list-style-type: none;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.section-title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: -0.03em;
+  text-align: center;
+  text-transform: uppercase;
+  color: #111;
+}
+.section-title span {
+  color: #fd9222;
+}
+/* HEADER */
 .header-logo {
   font-weight: 700;
   font-size: 18px;
@@ -23,4 +48,209 @@ ul {
   line-height: 1.14;
   letter-spacing: -0.02em;
   color: #111;
+}
+.header-menu-link:hover,
+.header-menu-link:focus {
+  color: #fd9222;
+}
+
+/* HERO */
+.hero {
+  background-color: #1e1823;
+}
+.hero-title {
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 1.21;
+  letter-spacing: -0.03em;
+  color: #fff;
+}
+.hero-btn {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.21;
+  color: #fff;
+  cursor: pointer;
+}
+.hero-btn-link {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.21;
+  color: #fff;
+  cursor: pointer;
+}
+.hero-btn-scroll {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.03em;
+  color: #fff;
+  cursor: pointer;
+}
+/* FEATURES */
+.features {
+  background-color: #1e1823;
+}
+.features-list {
+}
+.features-item {
+}
+.features-subtitle {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: -0.03em;
+  color: #fff;
+}
+.features-item-text {
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  line-height: 1.21;
+  color: rgba(255, 255, 255, 0.7);
+}
+/* TASTE */
+.taste {
+}
+.taste-title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: -0.03em;
+  text-align: center;
+  text-transform: uppercase;
+  color: #111;
+}
+.title-accent {
+  color: #fd9222;
+}
+.taste-text {
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
+  text-align: center;
+  color: #111;
+}
+.taste-list {
+}
+.taste-item {
+}
+.taste-image {
+}
+.taste-subtitle {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
+  text-transform: uppercase;
+  color: #111;
+}
+/* MADE */
+.made {
+}
+.made-title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  text-align: center;
+  color: #111;
+}
+.made-title span {
+  color: #fd9222;
+}
+.made-image {
+}
+.made-subtitle {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.33;
+  color: #111;
+}
+.made-list {
+}
+.made-item {
+}
+.made-item-text {
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
+  color: #111;
+}
+/* LOVED */
+.loved {
+}
+.loved-title {
+}
+.loved-list {
+}
+.loved-item {
+}
+.loved-image {
+}
+.loved-subtitle {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.33;
+  text-align: center;
+  color: #111;
+}
+.loved-text {
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
+  text-align: center;
+  color: rgba(17, 17, 17, 0.7);
+}
+.loved-btn {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.22;
+  color: #111;
+  cursor: pointer;
+}
+
+/* FOOTER */
+.footer {
+  background-color: #1e1823;
+}
+.footer-text {
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 1.21;
+  letter-spacing: -0.02em;
+  color: #fff;
+}
+.footer-text span {
+  color: #fd9222;
+}
+.footer-subtitle {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.29;
+  text-align: center;
+  color: #fff;
+}
+.footer-adress {
+  font-style: normal;
+}
+.footer-adress-list {
+}
+.footer-adress-item {
+}
+.footer-adress-link {
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
+  text-align: center;
+  color: #fff;
+}
+.footer-menu-list {
+}
+.footer-menu-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: -0.02em;
+  color: #fff;
 }
