--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,31 @@ body {
 a {
   text-decoration: none;
 }
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
+
+button {
+  cursor: pointer;
+}
+.container {
+  width: 1166px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -32,6 +54,10 @@ ul {
   color: #fd9222;
 }
 /* HEADER */
+.header {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
 .header-logo {
   font-weight: 700;
   font-size: 18px;
@@ -57,6 +83,10 @@ ul {
 /* HERO */
 .hero {
   background-color: #1e1823;
+  margin-bottom: 72px;
+}
+.hero-wrapper {
+  padding: 380px 40px 40px 40px;
 }
 .hero-title {
   font-weight: 500;
@@ -64,13 +94,17 @@ ul {
   line-height: 1.21;
   letter-spacing: -0.03em;
   color: #fff;
+  margin-bottom: 32px;
 }
 .hero-btn {
   font-weight: 600;
   font-size: 14px;
   line-height: 1.21;
   color: #fff;
+  background-color: #fd9222;
   cursor: pointer;
+  border: none;
+  border-radius: 100px;
 }
 .hero-btn-link {
   font-weight: 600;
@@ -78,6 +112,8 @@ ul {
   line-height: 1.21;
   color: #fff;
   cursor: pointer;
+  border: 1px solid #fff;
+  border-radius: 100px;
 }
 .hero-btn-scroll {
   font-weight: 500;
@@ -90,8 +126,12 @@ ul {
 /* FEATURES */
 .features {
   background-color: #1e1823;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 .features-list {
+  padding-left: 18px;
+  padding-right: 18px;
 }
 .features-item {
 }
@@ -101,6 +141,7 @@ ul {
   line-height: 1.22;
   letter-spacing: -0.03em;
   color: #fff;
+  margin-bottom: 18px;
 }
 .features-item-text {
   font-size: 14px;
@@ -110,15 +151,11 @@ ul {
 }
 /* TASTE */
 .taste {
+  padding-top: 100px;
 }
 .taste-title {
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 1.17;
-  letter-spacing: -0.03em;
-  text-align: center;
-  text-transform: uppercase;
-  color: #111;
+  max-width: 411px;
+  margin: 0 auto 28px;
 }
 .title-accent {
   color: #fd9222;
@@ -129,6 +166,8 @@ ul {
   letter-spacing: -0.02em;
   text-align: center;
   color: #111;
+  max-width: 486px;
+  margin: 0 auto 50px;
 }
 .taste-list {
 }
