--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,16 @@ button {
   background-color: #1e1823;
   margin-bottom: 72px;
   border-radius: 30px;
+  background-image: linear-gradient(
+      rgba(30, 24, 35, 0.4),
+      rgba(30, 24, 35, 0.4)
+    ),
+    url(../images/main-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-bottom: 72px;
 }
 .hero-wrapper {
   padding: 380px 40px 40px 40px;
