--- a/css/styles.css
+++ b/css/styles.css
@@ -108,11 +108,25 @@ button {
 .header-soc-item {
 }
 .header-soc-link {
+  width: 40px;
+  height: 40px;
+  background-color: #fd9222;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header-soc-link:hover {
+  background-color: aquamarine;
+}
+
+.header-soc-link:hover .header-soc-icon {
+  stroke: tomato;
 }
 
 .header-soc-icon {
   fill: transparent;
-  stroke: #111;
+  stroke: #111111;
 }
 
 /* HERO */
