--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,15 @@ button {
   padding: 14px 40px;
   min-width: 144px;
   margin-right: 14px;
+  /* transition-property: background-color, color;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275); */
+  transition: background-color 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275),
+    color 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.hero-btn:hover {
+  background-color: #fcf1e0;
+  color: #fd9222;
 }
 .hero-btn-link {
   font-weight: 600;
@@ -181,6 +190,11 @@ button {
   padding: 14px 40px;
   min-width: 183px;
   background-color: transparent;
+}
+
+.hero-btn-link:hover {
+  color: #fd9222;
+  border: 1px solid #fd9222;
 }
 .hero-btn-scroll {
   font-weight: 500;
@@ -271,6 +285,10 @@ button {
   color: #111;
   width: ((100% - 3 * 19px) / 4);
 }
+
+.taste-item-second:hover .taste-cover-text {
+  transform: translateY(0);
+}
 .taste-item-third {
   border-radius: 15px;
   width: 270px;
@@ -300,7 +318,26 @@ button {
   letter-spacing: -0.02em;
   text-transform: uppercase;
 }
-
+.taste-cover-wrap {
+  position: relative;
+  overflow: hidden;
+}
+.taste-cover-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 14px;
+  padding: 20px;
+  height: 100%;
+  line-height: 1.28571;
+  letter-spacing: -0.02em;
+  color: #111;
+  background-color: #ffffff;
+  border-radius: 15px;
+  transform: translateY(100%);
+  transition: transform 300ms linear;
+  overflow: auto;
+}
 /* MADE */
 .made {
   padding-bottom: 100px;
@@ -387,6 +424,12 @@ button {
   line-height: 1.22;
   color: #111;
   cursor: pointer;
+  border: 1px solid #fd9222;
+  border-radius: 100px;
+  padding: 14px 40px;
+  width: 222px;
+  height: 50px;
+  background-color: transparent;
 }
 
 /* FOOTER */
