--- a/css/styles.css
+++ b/css/styles.css
@@ -478,3 +478,118 @@ button {
   letter-spacing: -0.02em;
   color: #fff;
 }
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  background-color: rgba(30, 24, 35, 0.581);
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+}
+.modal {
+  width: 517px;
+  min-height: 794px;
+  background-color: #fafafa;
+  border-radius: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 40px;
+}
+.modal-close {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 26px;
+  right: 26px;
+}
+
+.modal-title {
+  text-align: left;
+  max-width: 300px;
+  margin-bottom: 40px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 68px;
+  border: 1px solid rgba(17, 17, 17, 0.05);
+  background-color: transparent;
+  border-radius: 13px;
+  padding-left: 62px;
+  padding-right: 24px;
+  font-size: 16px;
+  outline: transparent;
+}
+
+.modal-input:focus {
+  border-color: #fd9222;
+}
+
+.modal-input:focus + .modal-input-icon {
+  stroke: #fd9222;
+}
+
+.input-wrap {
+  position: relative;
+}
+
+.modal-input-icon {
+  fill: transparent;
+  stroke: #111111;
+  position: absolute;
+  left: 24px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.modal-input::placeholder {
+}
+
+.modal-field {
+  margin-bottom: 18px;
+}
+
+/* .modal-input:valid {
+  background-color: yellowgreen;
+}
+
+.modal-input:invalid {
+  background-color: salmon;
+} */
+
+.modal-label {
+  display: inline-block;
+  margin-bottom: 5px;
+  line-height: 1.21;
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  color: rgba(64, 64, 64, 0.3);
+}
+
+.modal-textarea {
+  width: 100%;
+  min-height: 137px;
+  border: 1px solid rgba(17, 17, 17, 0.05);
+  background-color: transparent;
+  border-radius: 13px;
+  padding: 24px;
+  font-size: 16px;
+  outline: transparent;
+  resize: none;
+}
+
+.modal-textarea::placeholder {
+}
+
+.modal-submit-btn {
+  border-radius: 100px;
+  padding: 14px 40px;
+  width: 117px;
+  height: 45px;
+  background-color: #fd9222;
+  border: none;
+}
