--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Montserrat", sans-serif;
+  background-color: #fafafa;
 }
 a {
   text-decoration: none;
@@ -110,7 +111,6 @@ button {
 .header-soc-link {
   width: 40px;
   height: 40px;
-  background-color: #fd9222;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -243,7 +243,7 @@ button {
 /* TASTE */
 .taste {
   padding-top: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
 }
 .taste-title {
   max-width: 411px;
@@ -340,7 +340,7 @@ button {
 }
 /* MADE */
 .made {
-  padding-bottom: 100px;
+  padding-bottom: 50px;
 }
 .made-title {
   font-weight: 600;
@@ -358,14 +358,15 @@ button {
 
 .made-container {
   display: flex;
-  align-items: flex-start;
   gap: 20px;
 }
+
 .made-content {
-  display: flex;
-  flex-direction: column;
   padding: 32px;
+  background-color: #ffffff;
+  border-radius: 15px;
 }
+
 .made-image {
   border-radius: 15px;
   width: 600px;
@@ -381,11 +382,30 @@ button {
   margin-bottom: 28px;
 }
 .made-list {
-  list-style: disc;
-  padding-left: 20px;
+  max-width: 425px;
 }
 .made-item {
+  margin-bottom: 24px;
+  position: relative;
+  padding-left: 16px;
 }
+
+.made-item:before {
+  content: "";
+  width: 8px;
+  height: 8px;
+  background-color: #4c4c4c;
+  border: 1px solid #eceded;
+  border-radius: 50%;
+  position: absolute;
+  left: 0;
+  top: 5px;
+}
+
+.made-item:last-child {
+  margin-bottom: 0;
+}
+
 .made-item-text {
   font-size: 14px;
   line-height: 1.29;
@@ -395,6 +415,8 @@ button {
 }
 /* LOVED */
 .loved {
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
 .loved-title {
 }
@@ -435,30 +457,47 @@ button {
 /* FOOTER */
 .footer {
   background-color: #1e1823;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding-bottom: 50px;
+  margin-bottom: 24px;
+}
+
 .footer-text {
   font-weight: 500;
   font-size: 28px;
   line-height: 1.21;
   letter-spacing: -0.02em;
   color: #fff;
+  max-width: 300px;
 }
 .footer-text span {
   color: #fd9222;
 }
+
+.footer-contacts {
+}
+
 .footer-subtitle {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.29;
-  text-align: center;
   color: #fff;
+  margin-bottom: 14px;
 }
 .footer-adress {
   font-style: normal;
 }
 .footer-adress-list {
 }
-.footer-adress-item {
+.footer-adress-item:not(:last-child) {
+  margin-bottom: 4px;
 }
 .footer-adress-link {
   font-size: 14px;
@@ -467,16 +506,65 @@ button {
   text-align: center;
   color: #fff;
 }
-.footer-menu-list {
+
+.footer-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+
+.footer-menu-list {
+  display: flex;
+  gap: 24px;
+}
+
 .footer-menu-item {
 }
+
 .footer-menu-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: -0.02em;
   color: #fff;
+}
+
+.footer-form {
+  display: flex;
+  gap: 8px;
+}
+
+.footer-field {
+}
+
+.footer-input {
+  border: 1.5px solid rgba(255, 255, 255, 0.15);
+  border-radius: 30px;
+  width: 313px;
+  height: 52px;
+  background-color: transparent;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.footer-input::placeholder {
+  font-size: 18px;
+  letter-spacing: -0.02em;
+  color: rgba(255, 255, 255, 0.3);
+  line-height: 1.22;
+}
+
+.footer-btn {
+  border-radius: 100px;
+  width: 137px;
+  height: 52px;
+  background-color: #fd9222;
+  font-size: 14px;
+  line-height: 1.21;
+  font-weight: 600;
+  color: #ffffff;
+  border: none;
+  padding: 17px 32px;
 }
 
 .backdrop {
@@ -488,6 +576,15 @@ button {
   /* display: flex;
   align-items: center;
   justify-content: center; */
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 .modal {
   width: 517px;
@@ -592,4 +689,38 @@ button {
   height: 45px;
   background-color: #fd9222;
   border: none;
+  color: #fff;
+  font-weight: 600;
+}
+
+.modal-check-text {
+  font-size: 14px;
+  line-height: 1.21;
+  letter-spacing: -0.02em;
+  color: rgba(64, 64, 64, 0.6);
+  display: flex;
+  align-items: center;
+}
+
+.modal-check-item {
+  width: 20px;
+  height: 20px;
+  border-radius: 6px;
+  border: 1px solid rgba(17, 17, 17, 0.14);
+  margin-right: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
+.modal-check:checked + .modal-check-text .modal-check-item {
+  border: none;
+  background-color: #fd9222;
+  fill: #fff;
+}
+
+.privacy-link {
+  color: #fd9222;
+  text-decoration: underline;
 }
